fixing layout issue with job titles

--- a/css/site.css
+++ b/css/site.css
@@ -143,7 +143,7 @@ article > header {
     line-height: 50px;
 }
 
-p.skill-blurb {
+p.blurb {
     margin-bottom: 0.1em;
 }
 
